cli/tests/error_024_stack_promise_all.ts
const p = Promise.all([
  Promise.resolve(),
  (async (): Promise<never> => {
    await Promise.resolve();
    throw new Error("Promise.all()");
  })(),
]);

try {
  await p;
} catch (error) {
  console.log(error.stack);
  throw error;
}
